.opsera-voting2/k8s/base/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
    app.kubernetes.io/name: worker
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: voting2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
        app.kubernetes.io/name: worker
    spec:
      serviceAccountName: worker
      containers:
        - name: worker
          image: PLACEHOLDER_WORKER_IMAGE
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
