.opsera-voting2/k8s/base/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
    app.kubernetes.io/name: result
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: voting2
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: result
