.opsera-voting2/k8s/base/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
    app.kubernetes.io/name: vote
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: voting2
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: vote
